fixed alignment for internal order number in edit meri plan. #2371

--- a/grails-app/assets/stylesheets/meriplan.css
+++ b/grails-app/assets/stylesheets/meriplan.css
@@ -377,3 +377,7 @@ input, textarea, select{
 .service-targets .input-group .input-group-append .input-group-text {
     height: 30px;
 }
+
+input.internalOrderNumber {
+    width: 12rem;
+}
